--- a/youtube-project/src/components/About/About.css
+++ b/youtube-project/src/components/About/About.css
@@ -1,9 +1,11 @@
 .about-page {
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 .about-page article,
 .about-page aside {
+  padding: 1.5rem;
   margin: 3rem auto;
   width: fit-content;
 }
@@ -11,13 +13,13 @@
 .about-page h1,
 .about-page h3 {
   margin: 1rem 0;
-  text-align: center;
 }
 
 .about-page aside {
   display: flex;
   gap: 5rem;
 }
+
 .creator-profile {
   padding: 1rem;
   border-radius: 0.5rem;
@@ -26,7 +28,16 @@
 }
 
 .creator-profile img {
-  height: 15rem;
-  width: 15rem;
+  height: 13rem;
+  width: 13rem;
   border-radius: 100%;
+}
+
+@media screen and (max-width: 991px) {
+  /* start of large tablet styles */
+  .about-page aside {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+  }
 }
