--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,30 +1,47 @@
 .search-bar {
-  padding: 2rem;
   text-align: center;
+  min-width: 356px;
+  display: flex;
+  width: -webkit-fill-available;
 }
 .search-bar input[type='text'],
-.search-bar input[type='submit'] {
+.search-bar button[type='submit'] {
   padding: 0.5rem;
-  border-radius: 0.5rem;
+  padding-left: 20px;
+  border-radius: 20px;
   border-width: 1px;
 }
 
 .search-bar input[type='text'] {
-  min-width: 40%;
-  width: 13rem;
+  min-width: 60%;
 }
 
-.search-bar input[type='submit'] {
-  width: 5rem;
+.search-bar button[type='submit'] {
+  width: 3.5rem;
+  height: 34px;
   margin-left: 0.5rem;
-  background-color: red;
-  border-color: red;
-  color: white;
+  background-color: #f8f8f8;
   transition: all ease 200ms;
+  position: relative;
+  right: 60px;
+  border-radius: 0 20px 20px 0;
+  z-index: 2;
 }
 
-.search-bar input[type='submit']:hover {
-  background-color: white;
-  color: red;
+.searchIcon {
+  position: relative;
+  right: 10px;
+  bottom: 3px;
   cursor: pointer;
+ 
+}
+
+.search-bar button[type='submit']:hover {
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+
+main {
+  display: flex;
+  width: -webkit-fill-available;
 }
