Style the videos

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -40,3 +40,7 @@ nav {
     width: -webkit-fill-available;
     justify-content: flex-start;
 }
+
+.navLink:hover {
+  text-decoration: underline;
+}
