--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,26 +4,26 @@
   display: flex;
   width: -webkit-fill-available;
 }
-.search-bar input[type='text'],
-.search-bar button[type='submit'] {
+
+.search-bar input,
+.search-bar button {
   padding: 0.5rem;
   padding-left: 20px;
   border-width: 0;
   border: 1px solid gray;
 }
 
-.search-bar input[type='text'] {
+.search-bar input {
   min-width: 60%;
   border-radius: 40px 0 0 40px;
 }
 
-.search-bar input[type='text']:focus {
+.search-bar input:focus {
   outline: 1px solid blue;
   z-index: 1;
-
 }
 
-.search-bar button[type='submit'] {
+.search-bar button {
   width: 3.5rem;
   height: 34px;
   background-color: #f8f8f8;
@@ -32,20 +32,14 @@
   border-radius: 0 20px 20px 0;
 }
 
-.searchIcon {
+.search-bar button:hover {
+  cursor: pointer;
+  color: red;
+}
+
+.search-bar .searchIcon {
   position: relative;
   right: 10px;
   bottom: 3px;
   cursor: pointer;
- 
-}
-
-.search-bar button[type='submit']:hover {
-  background-color: #f0f0f0;
-  cursor: pointer;
-}
-
-main {
-  display: flex;
-  width: -webkit-fill-available;
 }
