--- a/src/components/ErrorMessage/ErrorMessage.css
+++ b/src/components/ErrorMessage/ErrorMessage.css
@@ -24,13 +24,20 @@
 }
 
 .error-message .x-svg {
-  font-size: 2rem;
+  font-size: 1.75rem;
   color: red;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0;
   align-self: flex-end;
+  border-radius: 10rem;
+  padding: 0.25rem;
+}
+.error-message .x-svg:hover {
+  color: white;
+  background: red;
+  cursor: pointer;
 }
 
 .error-message .void-svg {
