Create initial comment form

--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -1,4 +1,14 @@
+.videoDiv {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    align-items: center;
+}
 
 .youtubeVideo {
     margin-top: 50px;
+    display: flex;
+    width: 100vw;
+    height: auto;
+    justify-content: center;
 }
