Add comments state inside of App.js

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -20,7 +20,7 @@
   gap: 4rem;
 }
 
-.about-page .outter-card {
+.about-page .outer-card {
   perspective: 1000px;
   height: 18rem;
   width: 15rem;
